[package]
name = "ad_exchange_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.3"
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7.1"
ic-ledger-types = "0.7.0"
ic0 = "0.18.11"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
base64 = "0.21.3"

[dependencies.image]
version = "0.24.7"  
default-features = false
features = ["png"]